[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sword.tscn" type="PackedScene" id=1]
[ext_resource path="res://Orange2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI_script/LevelSelectionScreen.gd" type="Script" id=3]
[ext_resource path="res://Sprites/MainMenu UI/Main Menu Background.png" type="Texture" id=4]
[ext_resource path="res://Sprites/LevelSelection UI/LevelSelectionDashboard-01.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 253.54, 6.73795 )

[node name="LevelSelectionScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 257.255, 144 )
scale = Vector2( 0.240425, 0.239601 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 164 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="EndlessModeOrange" parent="." instance=ExtResource( 2 )]
position = Vector2( 199.608, 183.995 )
gravity_scale = 0.0

[node name="TimeModeOrange" parent="." instance=ExtResource( 2 )]
position = Vector2( 297.727, 184.21 )
gravity_scale = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Sword" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="LevelSelectorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelSelectorArea"]
position = Vector2( 257.212, 270.181 )
shape = SubResource( 1 )
[connection signal="body_exited" from="LevelSelectorArea" to="." method="_on_LevelSelectorArea_body_exited"]
